<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="Puesto_CA1" Id="{420bafb8-f351-4329-a6d0-29f56db352f8}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Puesto_CA1
VAR
	Balanza_CA1: Balanza;
	dHS:DINT;
	Cmd_Full: R_TRIG;
	TmrLabelFinalizado: TON;
	CA1_Calibracion: Calibracion_Liq_calc;
	Tarar_balanza :BOOL;
	Offset_ref:REAL;
	Inyectar_ref:BOOL;
	InicioCal_ref:BOOL;
	PesoEspec:REAL;
	UltimaCalibracao:UDINT;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Indica a ultima calibração da linha selecionada
UltimaCalibracao := HMI.UltimasCalibracoes[HMI.iCircuito_a_calibrar];

Balanza_CA1(
	wStatus:=Entradas.CA1_WT1_wStatus , 
	rValue_REAL:=Entradas.CA1_WT1_rValue_REAL , 
	nValue_DINT:=Entradas.CA1_WT1_nValue_DINT , 
	nValue_Supply:=dHS , 
	nValue_Bridge:=dHS , 
	stEcSlaveAmsNetAdr:=Entradas.CA1_WT1_stEcSlaveAmsNetAdr , 
	bWcState:=Entradas.CA1_WT1_bWcState , 
	wState:=Entradas.CA1_WT1_wState , 
	bCmd_FullCalibration:=HMI.bCmd_Full_WT_CA1 , 
	bCmd_ZeroCalibration:=HMI.bCmd_Zero_WT_CA1 , 
	bCmd_Tara:=Tarar_balanza , 
	bCmd_LoadReference:=HMI.bCmd_LoadReference_WT_CA1 ,
	fLoadReference:=(HMI.rPesoPatron_WT_CA1)/1000,
	wControl=>Salidas.CA1_WT1_wControl );
	
	TmrLabelFinalizado(IN:= HMI.bCmd_Full_WT_CA1 , PT:=T#10S , Q=> , ET=> );
	
	HMI.bCmd_LoadReference_WT_CA1:=FALSE;
	HMI.bCmd_Zero_WT_CA1:=FALSE;
	HMI.bCmd_Full_WT_CA1:=FALSE;
	Tarar_balanza:=FALSE;
	Cmd_Full(CLK:=TmrLabelFinalizado.Q , Q=> );
	IF 	Cmd_Full.Q THEN
		HMI.bCalibrado_WT_CA1:=TRUE;
	END_IF
/////////
PesoEspec:=Liquidos.TablaLiquidos[Liquidos.Circuito_Liquido[HMI.iCircuito_a_calibrar]].rDensidad;
CASE HMI.iCircuito_a_calibrar OF
	1:	Offset_ref:=Liquidos.Circuito_Offset[1];
		Inyectar_ref:=circuito_L1.Modo_Calibrar_L1;
		InicioCal_ref:=HMICA1.Inicio_calibracion;
		HMICA1.VolumenPedido_calibracion:=circuito_L1.Volumen_L1;
	2:	Offset_ref:=Liquidos.Circuito_Offset[2];
		Inyectar_ref:=circuito_L2.Modo_Calibrar_L2;
		InicioCal_ref:=HMICA1.Inicio_calibracion;
		HMICA1.VolumenPedido_calibracion:=circuito_L2.Volumen_L2;	
	3:	Offset_ref:=Liquidos.Circuito_Offset[3];
		Inyectar_ref:=circuito_L3.Modo_Calibrar_L3;
		InicioCal_ref:=HMICA1.Inicio_calibracion;
		HMICA1.VolumenPedido_calibracion:=circuito_L3.Volumen_L3;
	4:	Offset_ref:=Liquidos.Circuito_Offset[4];
		Inyectar_ref:=circuito_L4.Modo_Calibrar_L4;
		InicioCal_ref:=HMICA1.Inicio_calibracion;
		HMICA1.VolumenPedido_calibracion:=circuito_L4.Volumen_L4;	
		
		ELSE
	;		
END_CASE
	
/////////////////
CA1_Calibracion(
	Dosis:=HMICA1.Dosis_calibracion , 
	PesoSemilla:=HMICA1.Peso_calibracion,
	Tolerancia:=HMICA1.Tolerancia_calibracion , 
	PesoBalanza:=Entradas.CA1_WT1_rValue_REAL ,
	mlPedido:= HMICA1.VolumenPedido_calibracion,
	PesoEspec:=Puesto_CA1.PesoEspec , 
	Offset:=Offset_ref ,
	TiempoIny:=HMICA1.TInyeccion_calibracion , 
	Vol_Probeta:=(HMICA1.VolMaxProbeta_calibracion*1000) , 
	Pausa:=HMICA1.Pausa_calibracion , 
	Dosificar=> , 
	Probeta_Llena:=HMICA1.VaciarProbeta_calibracion , 
	Inyectar:=Inyectar_ref, 
	ml:=HMICA1.Volumen_calibracion, 
	Tiempo:=HMICA1.Tiempo_calibracion , 
	InicioCal:= InicioCal_ref, 
	Continuar:=HMICA1.Continuar_calibracion , 
	Tarar:=Tarar_balanza,
	Finalizado:=HMICA1.Fin_calibracion,
	mlProbeta=>HMICA1.Vol_enProbeta , 
	TiempoInyectado:=HMICA1.TiempoInyectado,
	Error_promedio=> HMICA1.Error_promedio, );
//
CASE HMI.iCircuito_a_calibrar OF
	1:	Liquidos.Circuito_Offset[1]:=Offset_ref;//Offset_ref
		circuito_L1.Modo_Calibrar_L1:=Inyectar_ref;//Inyectar_ref
		HMICA1.Inicio_calibracion:=InicioCal_ref;
	2:	Liquidos.Circuito_Offset[2]:=Offset_ref;//Offset_ref
		circuito_L2.Modo_Calibrar_L2:=Inyectar_ref;//Inyectar_ref
		HMICA1.Inicio_calibracion:=InicioCal_ref;
	3:	Liquidos.Circuito_Offset[3]:=Offset_ref;//Offset_refA
		circuito_L3.Modo_Calibrar_L3:=Inyectar_ref;//Inyectar_ref
		HMICA1.Inicio_calibracion:=InicioCal_ref;
	4:	Liquidos.Circuito_Offset[4]:=Offset_ref;//Offset_ref
		circuito_L4.Modo_Calibrar_L4:=Inyectar_ref;//Inyectar_ref
		HMICA1.Inicio_calibracion:=InicioCal_ref;
		
		ELSE
	;		
END_CASE
	
	]]></ST>
    </Implementation>
    <LineIds Name="Puesto_CA1">
      <LineId Id="228" Count="0" />
      <LineId Id="230" Count="0" />
      <LineId Id="247" Count="0" />
      <LineId Id="7" Count="11" />
      <LineId Id="39" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="76" Count="1" />
      <LineId Id="125" Count="0" />
      <LineId Id="212" Count="0" />
      <LineId Id="126" Count="1" />
      <LineId Id="131" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="194" Count="0" />
      <LineId Id="134" Count="1" />
      <LineId Id="143" Count="0" />
      <LineId Id="195" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="196" Count="0" />
      <LineId Id="190" Count="1" />
      <LineId Id="145" Count="0" />
      <LineId Id="197" Count="0" />
      <LineId Id="139" Count="2" />
      <LineId Id="128" Count="0" />
      <LineId Id="89" Count="1" />
      <LineId Id="93" Count="1" />
      <LineId Id="111" Count="0" />
      <LineId Id="96" Count="1" />
      <LineId Id="112" Count="0" />
      <LineId Id="98" Count="0" />
      <LineId Id="113" Count="0" />
      <LineId Id="99" Count="9" />
      <LineId Id="91" Count="0" />
      <LineId Id="123" Count="1" />
      <LineId Id="192" Count="0" />
      <LineId Id="110" Count="0" />
      <LineId Id="162" Count="0" />
      <LineId Id="146" Count="3" />
      <LineId Id="167" Count="1" />
      <LineId Id="152" Count="0" />
      <LineId Id="165" Count="1" />
      <LineId Id="155" Count="0" />
      <LineId Id="163" Count="1" />
      <LineId Id="158" Count="3" />
      <LineId Id="61" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="24" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>